include(GNUInstallDirs)

set(OPENQASM_INCLUDE_DIRS "AST" "Frontend" "QPP" "Diagnostic")

install(DIRECTORY ${OPENQASM_INCLUDE_DIRS}
        FILE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
        DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                              GROUP_READ GROUP_EXECUTE
                              WORLD_READ WORLD_EXECUTE
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/qasm)

